--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kubedaily
 description: Stay Update with Cloud Native Technologies 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /assets/image/avatar.png
+avatar: /assets/image/KubeDaily-logo.jpg
 
 #
 # Flags below are optional
