--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,11 @@ footer_links:
   - title: Discord
     url: http://discord.kubedaily.live/
     icon: fa fa-discord
+     
+  - title: Discord
+    url: http://discord.kubedaily.live/
+    icon: fa fa-youtube-play 
+  
 
 # Enter your copyright text if you wish to override the default one.
 #copyright: "This site is made with <3 by *me, myself, and I*."
