--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ navigation_links:
   - title: Blog
     url: /
 
-  - title: Github 360 
-    url: /about
+  - title: tooling 
+    url: /tooling
 
   - title: Search
     url: /search
