--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ navigation_links:
 
 # Author details.
 
-authors:
+author:
     sangambirdar:
        name: Sangam Biradar
        web: http://twitter.com/BiradarSangam
