--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ navigation_links:
     url: /search
     
   - title: Join Community  
-    url: /community 
+    url: http://discord.kubedaily.live
 
 
 # Footer icons
