--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,42 +1,32 @@
-name: Hugo
+name: Build
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
+      - gh-pages
+  workflow_dispatch:
+    # manual run
 
 jobs:
-
   build:
-    name: Build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    
-    - name: Checkout submodules
-      uses: textbook/git-checkout-submodule-action@master
-    
-    - name: install pandoc
-      run: |
-           wget https://github.com/jgm/pandoc/releases/download/2.11.4/pandoc-2.11.4-1-amd64.deb
-           sudo dpkg -i pandoc-2.11.4-1-amd64.deb
- 
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
-      with:
-        hugo-version: '0.71.1'
-        extended: true
-          
-    - name: Build
-      run: |
-       npm install -D --save autoprefixer
-       npm install -D --save postcss-cli
-       hugo
+      - name: Git checkout
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
 
-    - name: Deploy to GitHub Pages
-      if: success() && github.event_name != 'pull_request'
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+      - name: Get Theme
+        run: git submodule update --init --recursive
+
+      - name: Update theme to Latest commit
+        run: git submodule update --remote --merge
+
+      - name: Setup hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.83.0'
+
+      - name: Build
+        run: hugo --buildDrafts --gc --verbose --minify
