--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - master
-      - gh-pages
+      - website
   workflow_dispatch:
     # manual run
 
@@ -15,7 +15,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
         with:
-          ref: gh-pages
+          ref: website
 
       - name: Get Theme
         run: git submodule update --init --recursive
