--- a/.github/workflow/build.yml
+++ b/.github/workflow/build.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - master
+      - exampleSite
   
   workflow_dispatch:
     # manual run
@@ -15,7 +16,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
         with:
-          ref:  master
+          ref: exampleSite
 
       - name: Get Theme
         run: git submodule update --init --recursive
