--- a/_data/author.yml
+++ b/_data/author.yml
@@ -2,7 +2,7 @@ name: Sangam Biradar
 dp: https://avatars.githubusercontent.com/u/21982562?v=4
 description: 
   <p>
-    Sangam Biradar work at tenble as Advocacy Manager, Docker Community Leader Award Winner | AWS/CDF Community Builder
+    Sangam Biradar work at tenable as Advocacy Manager, Docker Community Leader Award Winner | AWS/CDF Community Builder
   </p>
   <br/>
   <p>
