--- a/_config.yml
+++ b/_config.yml
@@ -24,5 +24,5 @@ defaults:
       path: "_posts"
     values:
       layout: "post"
-      permalink: /:title
+      permalink: /:categories/:year/:month/:day/:title.html
 exclude: ["sitemap.xml", "feed.xml", "LICENSE", "README.md"]
