--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "/" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
+baseURL: "https://kubedaily.com" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
 title: kubedaily
 paginate: 7
 theme: github.com/adityatelange/hugo-PaperMod
