--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -8,7 +8,7 @@ weight = 1
 [[main]]
 identifier = 'docs'
 name = 'Docker'
-pre = "<i class='icon icon-book'></i>"
+pre = "<i class='icon icons8-docker '></i>"
 url = '/docker/'
 weight = 2
 
@@ -22,7 +22,7 @@ weight = 3
 [[main]]
 identifier = 'k8s'
 name = 'Kubernetes'
-pre = "<i class='icon icon-book'></i>"
+pre = "<i class='icon icons8-kubernetes'></i>"
 url = '/k8s/'
 weight = 3
 
@@ -32,3 +32,11 @@ name = 'blog'
 pre = "<i class='icon icon-book'></i>"
 url = '/blog/'
 weight = 4
+
+[[main]]
+identifier = 'tools'
+name = 'cloudnativetools'
+pre = "<i class='icon icon-book'></i>"
+url = 'https://kubedaily.com/cloudnativetools/'
+weight = 5
+
