--- a/data/en/containersecurity/sidebar.yml
+++ b/data/en/containersecurity/sidebar.yml
@@ -2,7 +2,7 @@
   pages:
   - title: Overview
 
-- title: ContainerSecurity
+- title: 🔒ContainerSecurity
   pages:
   - title: What is container?
   - title: Container vs Virtualization
