--- a/data/en/docker/sidebar.yml
+++ b/data/en/docker/sidebar.yml
@@ -2,7 +2,7 @@
   pages:
   - title: Overview
 
-- title: Learn Docker
+- title: 🐳 Learn Docker
   pages:
   - title: Pre-requisit for this lab
   - title: Docker Hello World Example
