--- a/data/en/k8s/sidebar.yml
+++ b/data/en/k8s/sidebar.yml
@@ -14,5 +14,5 @@
   - title: Service Type - NodePort,ClusterIP,LoadBalancer
   - title: Ingress Controller
   - title: ConfigMap
-
+  - title: RBAC
 
