update-landing-page

--- a/data/landing.yaml
+++ b/data/landing.yaml
@@ -64,29 +64,100 @@ featureGrid:
       description: ContainerD is an industry-standard container runtime with an emphasis on simplicity, robustness and portability. It is available as a daemon for Linux and Windows, which can manage the complete container lifecycle of its host system image transfer and storage, container execution and supervision, low-level storage and network attachments, etc..
       modules:
         - title: "History of ContainerD"
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/History-of-ContainerD.md"
+          url: "/content/docs/containerD/History-of-ContainerD.md"
         - title: "Architecture of ContainerD "
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/Architecture.md"
+          url: "/content/docs/containerD/Architecture.md"
         - title: "Introduction to runc"
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/Introduction-to-Runc.md"
+          url: "/content/docs/containerD/Introduction-to-Runc.md"
         - title: ContainerD CLI Ctr 
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/ContainerD-ctr.md"
+          url: "/content/docs/containerD/ContainerD-ctr.md"
         - title: Kata Containers
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/kata-container.md"
+          url: "/content/docs/containerD/kata-container.md"
         - title: Firecraker
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/kata-container.md"
+          url: "/content/docs/containerD/kata-container.md"
         - title: ContaiNerd + Nerdctl
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/nerdctl.md"
+          url: "/content/docs/containerD/nerdctl.md"
         - title: "contaiNERD + runwasi"
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/runwasi.md"
+          url: "/content/docs/containerD/runwasi.md"
         - title: "Wasm + ContainerD + CRUN"
-          url: "https://github.com/kubernetesdaily/kubernetesdaily.github.io/blob/main/content/docs/containerD/WASM-ContainerD-Crun.md"
+          url: "/content/docs/containerD/WASM-ContainerD-Crun.md"
 
    
    
     - title: Docker
       icon: 🐳
       description: Docker is a set of platform as a service (PaaS) products that use OS-level virtualization to deliver software in packages called containers. Containers are isolated from one another and bundle their own software, libraries and configuration files; they can communicate with each other through well-defined channels.     
+      modules:
+        - title: "Prerequisites"
+          url: "/content/docs/docker/pre-requist.md"
+        - title: "Hello World in Docker"
+          url: "/content/docs/docker/hello-world.md"
+        - title: "Docker Image Filters"
+          url: "/content/docs/docker/docker-images-filter.md"
+        - title: "Images as Tar Files"
+          url: "/content/docs/docker/tarfile.md"
+        - title: "Pushing to DockerHub"
+          url: "/content/docs/docker/Push-DockerHub-Webapp.md"
+        - title: "Building a Base Image"
+          url: "/content/docs/docker/Scratch-Image.md"
+        - title: "Dockerfile ADD"
+          url: "/content/docs/docker/ADD-instruction.md"
+        - title: "Dockerfile COPY"
+          url: "/content/docs/docker/Copy-instruction.md"
+        - title: "Dockerfile CMD"
+          url: "/content/docs/docker/CMD-instruction.md"
+        - title: "Dockerfile Entrypoint"
+          url: "/content/docs/docker/Entrypoint-instruction.md"
+        - title: "Dockerfile WORKDIR"
+          url: "/content/docs/docker/WORKDIR-instruction.md"
+        - title: "Dockerfile RUN"
+          url: "/content/docs/docker/RUN-instruction.md"
+        - title: "Dockerfile ARG"
+          url: "/content/docs/docker/ARG-instruction.md"
+        - title: "Dockerfile Volume"
+          url: "/content/docs/docker/Volume-Instruction.md"
+        - title: "Dockerfile USER"
+          url: "/content/docs/docker/User-Instruction.md"
+        - title: "Dockerfile HEALTHCHECK"
+          url: "/content/docs/docker/HEALTHCHECK-instruction.md"
+        - title: "Dockerfile ENV"
+          url: "/content/docs/docker/ENV-instruction.md"
+        - title: "Dockerfile ONBUILD"
+          url: "/content/docs/docker/ONBUILD-instruction.md"
+        - title: "Multi-Container CLI"
+          url: "/content/docs/docker/Multiple-Container.md"
+        - title: "Multi-Arch Container"
+          url: "/content/docs/docker/Multi-Arch-Container.md"
+        - title: "Docker Compose Basics"
+          url: "/content/docs/docker/write-first-Docker_compose.md"
+        - title: "Docker Compose Volumes"
+          url: "/content/docs/docker/Docker-Compose-volumes.md"
+        - title: "Custom Dockerfile with Compose"
+          url: "/content/docs/docker/Custom-Docker-Compose.md"
+        - title: "PHP, Apache, and DB with Compose"
+          url: "/content/docs/docker/php-database-docker-compose.md"
+        - title: "Host Volume Mount"
+          url: "/content/docs/docker/Host-Volume-mount.md"
+        - title: "Named Volume Mount"
+          url: "/content/docs/docker/Name-volume-mount.md"
+        - title: "Compose Build Command"
+          url: "/content/docs/docker/docker-compose-build.md"
+        - title: "Compose Config Command"
+          url: "/content/docs/docker/docker-compose-config.md"
+        - title: "Compose CP Command"
+          url: "/content/docs/docker/docker-compose-cp.md"
+        - title: "Compose Create Command"
+          url: "/content/docs/docker/docker-compose-create.md"
+        - title: "Compose Down Command"
+          url: "/content/docs/docker/docker-compose-down.md"
+        - title: "Compose Events Command"
+          url: "/content/docs/docker/docker-compose-events.md"
+        - title: "Compose Exec Command"
+          url: "/content/docs/docker/docker-compose-exec.md"
+        - title: "Compose Images Command"
+          url: "/content/docs/docker/docker-compose-images.md"
+   
+   
     - title: kubernetes
       icon: ⎈
       description: kubernetes is an open-source container-orchestration system for automating computer application deployment, scaling, and management.
