--- a/data/landing.yaml
+++ b/data/landing.yaml
@@ -183,3 +183,7 @@ featureGrid:
     - title: Istio
       icon: ⛵
       description: Istio is an open-source service mesh that provides a key set of functionality across the microservices in a Kubernetes cluster. Istio provides behavioral insights and operational control over the service mesh as a whole, offering a complete solution to satisfy the diverse requirements of microservice applications.
+
+    - title: kubeflow
+      icon: 🌊
+      description: Kubeflow is an open-source project dedicated to making deployments of machine learning (ML) workflows on Kubernetes simple, portable, and scalable. Kubeflow is a machine learning toolkit for Kubernetes.
